--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.17",
+    "gray-matter": "^4.0.3",
+    "marked": "^4.0.12",
     "next": "^12.0.9",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sass": "^1.49.0",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "sass": "^1.49.0"
   },
   "devDependencies": {
     "eslint": "8.6.0",
